Update and rename 프림.java to 프림.md

--- a/프림.md
+++ b/프림.md
@@ -1,3 +1,18 @@
+# PRIM    
+PRIM 알고리즘이란, 최소신장트리를 구하기 위한 알고리즘으로      
+**하나의 정점에서 연결된 간선들 중에 하나씩 선택하면서 MST를 만들어가는 방식이다.**     
+       
+1. 임의 정점을 하나 선택해서 시작     
+2. 선택한 정점과 **인접하는 정점들 중의 최소 비용의 간선이 존재하는 정점을 선택**     
+3. 모든 정점이 선택될 때 까지 1,2 반복 
+   
+**서로소인 2개의 집합 정보를 유지**   
+* 트리 정점들 - MST를 만들기 위해 선택된 정점들 
+* 비트리 정점들 - 선택되지 않은 정점들  
+
+
+
+```java
 package algo;
 
 import java.io.BufferedReader;
@@ -52,3 +67,4 @@ class Main {
 	}
 
 }
+```
