--- a/프림.md
+++ b/프림.md
@@ -31,7 +31,7 @@ class Main {
 		int n = Integer.valueOf(BUFFERED_READER.readLine());
 		int[][] adjMatrix = new int[n][n];
 		boolean[] visited = new boolean[n];
-		int[] minEdge = new int[n];
+		int[] minEdge = new int[n];		// 정점으로 오는 가장 짧은 길이를 구한 값  
 
 		for (int i = 0; i < n; i++) {
 			stringTokenizer = new StringTokenizer(BUFFERED_READER.readLine(), " ");
