--- a/프림.md
+++ b/프림.md
@@ -44,7 +44,7 @@ class Main {
 		int result = 0;
 		minEdge[0] = 0;
 
-		for (int c = 0; c < n; c++) {
+		for (int c = 0; c < n; c++) { // 정점으로 오는 가장 짧은 길이를 구하는 로직 
 			int min = Integer.MAX_VALUE;
 			int minVertex = 0;
 			for (int i = 0; i < n; i++) {
