--- a/프림.md
+++ b/프림.md
@@ -47,16 +47,26 @@ class Main {
 		for (int c = 0; c < n; c++) { // 정점으로 오는 가장 짧은 길이를 구하는 로직 
 			int min = Integer.MAX_VALUE;
 			int minVertex = 0;
+			
+			// 신장트리에 연결되지 않은 정점 중, minEdge 비용이 최소인 정점  
 			for (int i = 0; i < n; i++) {
 				if (!visited[i] && min > minEdge[i]) {
 					min = minEdge[i];
 					minVertex = i;
 				}
 			}
-
+			// 여기까지 정점을 연결 한 것은 맞다.			
 			result += min;
 			visited[minVertex] = true;
 
+			
+			// 방금 연결한 친구를 기준으로 기존에 연결했던 값중 더 큰값이 있다면 갱신한다.  
+			// 예를 들어 
+			// 1 2 연결은 (비용10) 
+			// 이후 1에서 3을 연결 (비용3) -> 1-2-3 연결
+			// 근데 3에서 2가 (비용2)밖에 비용이 안들면?
+			// 10+3 보다는 2+3이 더 낫다.  
+			// 그러므로 [2]의 비용을 갱신하는 것이다.      
 			for (int i = 0; i < n; i++) {
 				if (!visited[i] && adjMatrix[minVertex][i] != 0 && minEdge[i] > adjMatrix[minVertex][i]) {
 					minEdge[i] = adjMatrix[minVertex][i];
